hide debug text; center game window

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <title>title</title>
 </head>
-<body>
-<canvas id="main-canvas" width="400" height="400" style="width: 80vmin;"></canvas>
+<body style="background-color: slategrey;">
+    <div style="display: flex; justify-content: center;">
+        <canvas id="main-canvas" width="400" height="400" style="width: 80vmin;"></canvas>
+    </div>
     <script src="utils.js"></script>
     <script src="script.js"></script>
 </body>
