--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: slategrey;">
+<body style="background-color: slategrey; overflow: hidden;">
     <div style="display: flex; justify-content: center;">
-        <canvas id="main-canvas" width="400" height="400" style="width: 80vmin;"></canvas>
+        <div id="canvasContainer" style="border: solid 2px black; margin: 0px; padding: 0px;">
+            <canvas id="main-canvas" width="600" height="600" style="margin: 0px; padding: 0px;"></canvas>
+        </div>
     </div>
     <script src="utils.js"></script>
     <script src="script.js"></script>
