--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color: slategrey; overflow: hidden;">
-    <div style="display: flex; justify-content: center;">
-        <div id="canvasContainer" style="border: solid 2px black; margin: 0px; padding: 0px;">
-            <canvas id="main-canvas" width="600" height="600" style="margin: 0px; padding: 0px;"></canvas>
+    <div style="display: flex; justify-content: center; width: 100vw;">
+        <div id="canvasContainer" style="position: relative;">
+            <canvas id="main-canvas" width="600" height="600"></canvas>
         </div>
     </div>
     <script src="utils.js"></script>
